syntax = "proto3";

import "reports.proto";

option java_multiple_files = true;
option java_outer_classname = "Reports2Proto";

package sinnet.reports.report2;

service Reports {
    rpc Produce (ReportRequest) returns (Response) { }
}

message ReportRequest {
    repeated ActivityDetails details = 1;
}

message ActivityDetails {
    YearMonth yearMonth = 1;
    string personName = 2;
    int32 howLongInMins = 3;
}
